--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ indicatif = ">=0.17.5"
 log = { version = ">=0.4.19", features = ["std"] }
 
 [dev-dependencies]
-env_logger = "*"
+env_logger = ">=0.10.0"
