--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "indicatif-log-bridge"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 description = "Bridge the log crate and indicatif to stop log lines from mixing up with progress bars"
 license = "MIT"
 author = "djugei"
 repository = "https://github.com/djugei/indicatif-log-bridge"
 keywords = ["cli", "progress", "progressbar", "logging", "log"]
-categories = ["command-line-interface", "concurrency", "async", "rust-patterns"]
+categories = ["command-line-interface", "concurrency", "asynchronous", "rust-patterns"]
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
